# This file defines the general configuration for the kojismokydingo
# wheel, and the tools tox, nose, flake8, coverage, and sphinx


[metadata]
name = javatools
version = 1.5.1
description = Tools for working with Java class files and JARs

author = Christopher O'Brien
author_email = obriencj@gmail.com

license = GNU Lesser General Public License v3 (LGPLv3)
license_file = LICENSE

long_description = file: README.md
long_description_content_type = text/markdown

home_page = https://github.com/obriencj/python-javatools

platform = any

project_urls =
  Source = https://github.com/obriencj/python-javatools
  Bug Reports = https://github.com/obriencj/python-javatools/issues

classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Software Development :: Disassemblers


[options]
packages =
  javatools
  javatools.cheetah

zip_safe = False

setup_requires =
  Cheetah3
  six

install_requires =
  Cheetah3
  M2Crypto >= 0.26.0
  six

tests_require =
  Cheetah3
  M2Crypto >= 0.26.0
  six


[options.package_data]
javatools.cheetah =
  *.tmpl
  data/*.css
  data/*.js
  data/*.png


[options.entry_points]

console_scripts =
  classdiff=javatools.classdiff:main
  classinfo=javatools.classinfo:main
  distdiff=javatools.distdiff:main
  distinfo=javatools.distinfo:main
  jardiff=javatools.jardiff:main
  jarinfo=javatools.jarinfo:main
  jarutil=javatools.jarutil:main
  manifest=javatools.manifest:main


[aliases]
# nose acts enough like the original test command, but without the
# extremely obnoxious deprecation warning. And why are they
# deprecating the test command? So someone can remove approximately 40
# lines of code from setuptools, despite the test command being the
# most convenient and available way to get started with unit testing.

test = nosetests


[tox:tox]
envlist = flake8,py{27,37,38,39,310},coverage,bandit
skip_missing_interpreters = true


[testenv]
setenv =
  COVERAGE_FILE = .coverage.{envname}

commands =
  coverage run -m nose

sitepackages = false

deps =
  coverage
  nose-py3

download = true


[testenv:py27]

deps =
  coverage
  nose


[testenv:bandit]

basepython = python3.9

commands =
  python -B -m bandit --ini setup.cfg -qr javatools

deps =
  bandit


[testenv:flake8]

basepython = python3.9

commands =
  python -B -m flake8 javatools

deps =
  flake8


[testenv:coverage]
# this is just here to combine the coverage output

setenv =
  COVERAGE_FILE = .coverage

basepython = python

commands =
  coverage combine
  coverage report
  coverage html


[nosetests]

all-modules = 1
no-byte-compile = 1
verbosity = 2


[coverage:run]

include =
  javatools


[coverage:report]

exclude_lines =
  \.\.\.
  pass
  pragma: no cover
  @abstract


[bandit]
# B101 complains about asserts

skips = B101


[flake8]
# E303 complains about more than one blank lines between methods in a class
# E731 assigning a lambda to a variable
# E741 ambiguous variable name
# F401 ambiguous variable name
# F812 list comprehension redefines variable (I reuse tmp names)
# W504 line break after binary operator

ignore = E303,E731,E741,F401,F812,W504

filename =
  *.py
  *.pyi

exclude =
  __pycache__
  .*
  build
  dist
  docs
  gh-pages
  htmlcov
  setup.py
  tests
  todo
  tools


#
# The end.
